massive build refactor

--- a/example-dev.html
+++ b/example-dev.html
@@ -7,11 +7,9 @@
 
         <title>Objective-JS Development Example</title>
 
-        <link rel="stylesheet" type="text/css" href="https://raw.github.com/NuAge-Solutions/OJ/master/builds/oj.css" />
-        <link rel="stylesheet" type="text/css" href="builds/nw.css" />
+        <link rel="stylesheet" type="text/css" href="builds/oj/main-dev.css" />
 
-        <script language="javascript" type="text/javascript" src="https://raw.github.com/NuAge-Solutions/OJ/master/builds/oj.js"></script>
-        <script language="javascript" type="text/javascript" src="builds/nw.js"></script>
+        <script language="javascript" type="text/javascript" src="builds/oj/main-dev.js"></script>
     </head>
 
     <body id="OJ" mode="development"></body>
