--- a/example-prod.html
+++ b/example-prod.html
@@ -7,9 +7,9 @@
 
         <title>Objective-JS Production Example </title>
 
-        <link rel="stylesheet" type="text/css" href="builds/oj.css" />
+        <link rel="stylesheet" type="text/css" href="builds/oj/main.css" />
 
-        <script language="javascript" type="text/javascript" src="builds/oj.js"></script>
+        <script language="javascript" type="text/javascript" src="builds/oj/main.js"></script>
     </head>
 
     <body id="OJ"></body>
